--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "vikonapi",
+  "name": "nfpi/vikonapi",
   "version": "0.1.0",
   "description": "Библиотека на PHP для работы с Vikon Api",
   "homepage": "https://db-nica.ru",
