--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
   "name": "nfpi/vikonapi",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "description": "Библиотека на PHP для работы с Vikon Api",
   "homepage": "https://db-nica.ru",
   "type": "library",
@@ -16,7 +16,6 @@
     }
   },
   "require": {
-    "php": ">=5.3",
-    "php-curl-class/php-curl-class": "^8.5"
+    "php": ">=5.3"
   }
 }
